--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/Piggybank.jpg" Height="100%" class="d-block w-100" alt="...">
+            <img src="img/images.jpg" Height="100%" class="d-block w-100" alt="...">
             <div class="carousel-caption">
               <h2>Welcome to our bank</h1>
             </div>
