:wq Please enter the commit message for your changes. Lines starting

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/images.jpg" Height="100%" class="d-block w-100" alt="...">
+            <img src="img/hey.png" Height="100%" class="d-block w-100" alt="...">
             <div class="carousel-caption">
               <h2>Welcome to our bank</h1>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/Safe.jpg" Height="100%" width="100%" class="d-block w-100" alt="...">
+            <img src="img/hello.png" Height="100%" width="100%" class="d-block w-100" alt="...">
             <div class="carousel-caption">
               <h2>Welcome to our bank</h1>
             </div>
